Stop "All stages" accordion stage title from wrapping

--- a/src/scss/cs/accordions.scss
+++ b/src/scss/cs/accordions.scss
@@ -2,6 +2,7 @@
 .stage-label-gcse, .stage-label-alevel, .stage-label-all {
   color: black;
   font-weight: 600;
+  text-wrap: none;
 }
 
 .stage-label-gcse {
